# thesis

./: .gitignore  data.csv  example_job_schedule_solution.csv  intro_draft.typ  justfile  macros.typ  main.typ  new_algo.typ  notes.txt  pyproject.toml  references.bib  thesis.typ
chapters/: analysis.typ  appendix.typ  conclusion.typ  discussion.typ  experimental_method.typ  introduction.typ  method.typ  problem_description.typ  related_work.typ  results.typ  runtime_analysis.typ  theory.typ
data/: all_datasets.csv  article_list.csv  eval_log_ratio_balanced.csv  eval_log_ratio_job_heavy.csv  eval_log_ratio_machine_heavy.csv  eval_log_ratio_ttest_balanced.csv  eval_log_ratio_ttest_job_heavy.csv  eval_log_ratio_ttest_machine_heavy.csv  eval_performance_profiles_balanced.csv  eval_performance_profiles_job_heavy.csv  eval_performance_profiles_machine_heavy.csv  eval_summary_balanced.csv  eval_summary_job_heavy.csv  eval_summary_machine_heavy.csv
presentation/: defense_presentation.tex
scripts/: analysis.py  eval.py  eval_multi_summary.py  eval_utils.py  generate_dataset.py  log_ratio_ttest.py  main.py  performance_profile.py  plot_cost_differences_hist.py  plot_cost_ratio_distributions.py  plot_raw_cost_hist.py  plot_runtime_cross_dataset.py  problem_generation.py  raw_cost_dataset_ttest_one_sided.py  raw_cost_ratio_shapiro.py  raw_cost_shapiro.py  raw_cost_wilcoxon.py  raw_machines_ratio_ttest.py  raw_machines_wilcoxon.py  raw_ratio_ttest.py  raw_ratio_ttest_one_sided.py  raw_runtime_dataset_ttest.py  raw_runtime_ratio_ttest.py  run_cross_dataset_ttests.sh  run_evals.sh
(+29 files in other folders)
